# chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.py  Makefile  asr.py  config.py  dialogue.py  docker-compose.yml  geocode.py  go.mod  go.sum  intent.py  main.py  pinyin_utils.py  pyproject.toml  requirements.txt  sqlc.yaml  tts.py
cmd/server/: main.go
internal/config/: config.go  config_test.go
internal/core/: dialogue.go  dialogue_test.go  geocode.go  geocode_test.go  intent.go  intent_test.go  llm_intent.go  llm_intent_test.go
internal/db/: db.go
internal/gateway/: request.go  request_test.go  sse.go  sse_test.go
internal/handler/: callbacks.go  callbacks_test.go  calls.go  calls_test.go  chat.go  chat_test.go  health.go  health_test.go  router.go
internal/log/: logger.go
internal/middleware/: auth.go  auth_test.go  logging.go
internal/model/: call_task.go  call_task_test.go
internal/repository/: call_repository.go
internal/service/: call_service.go  call_service_test.go  dialogue_service.go  dialogue_service_test.go
migrations/: 00001_create_call_tables.sql  embed.go
scripts/: make_call.py  query_call.py  run_local.py
src/: config.py  usage.py
src/caller/: aiccs.py
src/core/: dialogue.py  geocode.py  intent.py  pinyin_utils.py  session.py
src/gateway/: app.py  auth.py  routes.py  sse.py
src/local/: asr.py  tts.py
tests/: conftest.py  test_asr.py  test_dialogue.py  test_geocode.py  test_intent.py  test_main.py
tests/core/: test_dialogue.py  test_geocode.py  test_intent.py  test_session.py
(+15 files in other folders)
